get user id
